# SimGearVSG

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamlfmt  CMakeLists.txt  CMakePresets.json  ChangeLog  SimGearConfig.cmake.in
simgear/: CMakeLists.txt  compiler.h  constants.h  sg_inlines.h  simgear_config_cmake.h.in  simgear_precompile.h  simgear_scene_precompile.h  version.h.in
simgear/bucket/: newbucket.cxx  newbucket.hxx  test_bucket.cxx
simgear/bvh/: BVHBoundingBoxVisitor.hxx  BVHGroup.cxx  BVHGroup.hxx  BVHLineGeometry.cxx  BVHLineGeometry.hxx  BVHLineSegmentVisitor.cxx  BVHLineSegmentVisitor.hxx  BVHMaterial.hxx  BVHMotionTransform.cxx  BVHMotionTransform.hxx  BVHNearestPointVisitor.hxx  BVHNode.cxx  BVHNode.hxx  BVHPageNode.cxx  BVHPageNode.hxx  BVHPageRequest.cxx  BVHPageRequest.hxx  BVHPager.cxx  BVHPager.hxx  BVHStaticBinary.cxx  BVHStaticBinary.hxx  BVHStaticData.hxx  BVHStaticGeometry.cxx  BVHStaticGeometry.hxx  BVHStaticGeometryBuilder.hxx  BVHStaticLeaf.cxx  BVHStaticLeaf.hxx  BVHStaticNode.cxx  BVHStaticNode.hxx  BVHStaticTriangle.cxx  BVHStaticTriangle.hxx  BVHSubTreeCollector.cxx  BVHSubTreeCollector.hxx  BVHTerrainTile.cxx  BVHTerrainTile.hxx  BVHTransform.cxx  BVHTransform.hxx  BVHVisitor.hxx  CMakeLists.txt  bvhtest.cxx
simgear/canvas/: CMakeLists.txt  Canvas.cxx  Canvas.hxx  CanvasEvent.cxx  CanvasEvent.hxx  CanvasEventManager.cxx  CanvasEventManager.hxx  CanvasEventTypes.hxx  CanvasEventVisitor.cxx  CanvasEventVisitor.hxx  CanvasMgr.cxx  CanvasMgr.hxx  CanvasObjectPlacement.cxx  CanvasObjectPlacement.hxx  CanvasPlacement.cxx  CanvasPlacement.hxx  CanvasSystemAdapter.hxx  CanvasWindow.cxx  CanvasWindow.hxx  ODGauge.cxx  ODGauge.hxx  VGInitOperation.cxx  VGInitOperation.hxx  canvas_fwd.hxx
simgear/debug/: BufferedLogCallback.cxx  BufferedLogCallback.hxx  CMakeLists.txt  ErrorReportingCallback.cxx  ErrorReportingCallback.hxx  LogCallback.cxx  LogCallback.hxx  LogEntry.cxx  LogEntry.hxx  Reporting.cxx  Reporting.hxx  debug_types.h  logdelta.cxx  logdelta.hxx  logstream.cxx  logstream.hxx  logtest.cxx
simgear/embedded_resources/: EmbeddedResource.cxx  EmbeddedResource.hxx  EmbeddedResourceManager.cxx  EmbeddedResourceManager.hxx  EmbeddedResourceManager_private.hxx  EmbeddedResourceProxy.cxx  EmbeddedResourceProxy.hxx  embedded_resources_test.cxx
simgear/emesary/: Emesary.cxx  Emesary.hxx  INotification.hxx  IReceiver.hxx  ITransmitter.hxx  ReceiptStatus.hxx  Transmitter.hxx  notifications.hxx  test_emesary.cxx
simgear/environment/: metar.cxx  metar.hxx  precipitation.cxx  precipitation.hxx  test_metar.cxx  test_precipitation.cxx  visual_enviro.cxx  visual_enviro.hxx
simgear/ephemeris/: celestialBody.cxx  celestialBody.hxx  ephemeris.cxx  ephemeris.hxx  jupiter.cxx  jupiter.hxx  mars.cxx  mars.hxx  mercury.cxx  mercury.hxx  moonpos.cxx  moonpos.hxx  neptune.cxx  neptune.hxx  pluto.hxx  saturn.cxx  saturn.hxx  star.cxx  star.hxx  stardata.cxx  stardata.hxx  uranus.cxx  uranus.hxx  venus.cxx  venus.hxx
simgear/hla/: HLAOMTXmlVisitor.hxx  RTI13Ambassador.hxx  RTIData.hxx  RTIFederateFactoryRegistry.hxx
simgear/io/: ArchiveExtractor_private.hxx  CMakeLists.txt  DNSClient.cxx  DNSClient.hxx  DNSClient_cares.cxx  HTTPClient.cxx  HTTPClient.hxx  HTTPClient_private.hxx  HTTPFileRequest.cxx  HTTPFileRequest.hxx  HTTPMemoryRequest.cxx  HTTPMemoryRequest.hxx  HTTPRepository.cxx  HTTPRepository.hxx  HTTPRepository_private.hxx  HTTPRequest.cxx  HTTPRequest.hxx  HTTPTestApi_private.hxx  SGDataDistributionService.cxx  SGDataDistributionService.hxx  decode_binobj.cxx  http_repo_sync.cxx  httpget.cxx  iochannel.cxx  iochannel.hxx  lowlevel.cxx  lowlevel.hxx  lowtest.cxx  raw_socket.cxx  raw_socket.hxx  sg_binobj.cxx  sg_binobj.hxx  sg_file.cxx  sg_file.hxx  sg_mmap.cxx  sg_mmap.hxx  sg_netBuffer.cxx  sg_netBuffer.hxx  sg_netChannel.cxx  sg_netChannel.hxx  (+25 more)
simgear/magvar/: coremag.cxx  coremag.hxx  magvar.cxx  magvar.hxx  testmagvar.cxx
simgear/math/: CMakeLists.txt  SGBox.hxx  SGCMath.hxx  SGGeoc.hxx  SGGeod.hxx  SGGeodesy.cxx  SGGeodesy.hxx  SGGeodesyTest.cxx  SGGeometry.hxx  SGGeometryFwd.hxx  SGGeometryTest.cxx  SGIntersect.hxx  SGLimits.hxx  SGLineSegment.hxx  SGLocation.hxx  SGMath.hxx  SGMathFwd.hxx  SGMathTest.cxx  SGMatrix.hxx  SGMisc.hxx  SGPlane.hxx  SGQuat.hxx  SGRay.hxx  SGRect.hxx  SGSphere.hxx  SGTriangle.hxx  SGVec2.hxx  SGVec3.hxx  SGVec4.hxx  beziercurve.hxx  interpolater.cxx  interpolater.hxx  leastsqs.cxx  leastsqs.hxx  sg_geodesy.hxx  sg_random.cxx  sg_random.hxx  sg_types.hxx  simd.hxx  simd4x4.hxx  (+1 more)
simgear/misc/: CMakeLists.txt  CSSBorder.cxx  CSSBorder.hxx  CSSBorder_test.cxx  CocoaHelpers.mm  ListDiff.hxx  ResourceManager.cxx  ResourceManager.hxx  SVGpreserveAspectRatio.cxx  SVGpreserveAspectRatio.hxx  SVGpreserveAspectRatio_test.cxx  argparse.cxx  argparse.hxx  argparse_test.cxx  inputcolor.cxx  inputcolor.hxx  inputvalue.cxx  inputvalue.hxx  interpolator.cxx  interpolator.hxx  lru_cache.hxx  make_new.hxx  path_test.cxx  sg_dir.cxx  sg_dir.hxx  sg_dir_test.cxx  sg_hash.cxx  sg_hash.hxx  sg_path.cxx  sg_path.hxx  sgversionhelpers.hxx  stdint.hxx  stopwatch.hxx  strutils.cxx  strutils.hxx  strutils_test.cxx  swap_test.cpp  tabbed_values.cxx  tabbed_values.hxx  tabbed_values_test.cxx  (+4 more)
simgear/nasal/: NasalEmesaryInterface.cxx  NasalEmesaryInterface.hxx  bitslib.c  code.c  code.h  codegen.c  data.h  gc.c  hash.c  iolib.c  iolib.h  lex.c  lib.c  mathlib.c  misc.c  naref.h  nasal-bin.c  nasal.h  parse.c  parse.h  string.c  thread-posix.c  thread-win32.c  threadlib.c  unixlib.c  utf8lib.c  vector.c
simgear/package/: Catalog.cxx  Catalog.hxx  CatalogTest.cxx  Delegate.cxx  Delegate.hxx  Install.cxx  Install.hxx  Package.cxx  Package.hxx  PackageCommon.hxx  Root.cxx  Root.hxx  ioapi.h  md5.h  pkgutil.cxx  unzip.h
simgear/props/: AtomicChangeListener.cxx  AtomicChangeListener.hxx  ExtendedPropertyAdapter.hxx  PropertyBasedElement.cxx  PropertyBasedElement.hxx  PropertyBasedMgr.cxx  PropertyBasedMgr.hxx  PropertyInterpolationMgr.cxx  PropertyInterpolationMgr.hxx  PropertyInterpolator.cxx  PropertyInterpolator.hxx  (+16 more)
(+476 files in other folders)
